--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -239,6 +239,7 @@
     <ClCompile Include="HLE\sceMp4.cpp" />
     <ClCompile Include="HLE\sceMp3.cpp" />
     <ClCompile Include="HLE\sceGameUpdate.cpp" />
+    <ClCompile Include="HLE\sceReg.cpp" />
     <ClCompile Include="HLE\sceRtc.cpp" />
     <ClCompile Include="HLE\sceSas.cpp" />
     <ClCompile Include="HLE\sceSsl.cpp" />
@@ -479,6 +480,7 @@
     <ClInclude Include="HLE\sceMp4.h" />
     <ClInclude Include="HLE\sceMp3.h" />
     <ClInclude Include="HLE\sceGameUpdate.h" />
+    <ClInclude Include="HLE\sceReg.h" />
     <ClInclude Include="HLE\sceRtc.h" />
     <ClInclude Include="HLE\sceSas.h" />
     <ClInclude Include="HLE\sceSsl.h" />
